Add step to inner step field path automatically and fix disableErrorCheckFields

--- a/Documentation/GeneralOptions/PredefinedForm.html
+++ b/Documentation/GeneralOptions/PredefinedForm.html
@@ -129,7 +129,7 @@
           config <span class="ss">{</span>
             messageLimit <span class="o">=</span> <span class="mi">1</span>
             messageLimits <span class="ss">{</span>
-              <span class="mi">1</span><span class="p">.</span>customer<span class="p">.</span>email <span class="o">=</span> <span class="mi">2</span>
+              customer<span class="p">.</span>email <span class="o">=</span> <span class="mi">2</span>
             <span class="ss">}</span>
             fields <span class="ss">{</span>
               customer<span class="p">.</span>fields <span class="ss">{</span>
